Set `height: auto` to avoid stretching images

--- a/downstyler.css
+++ b/downstyler.css
@@ -1,7 +1,7 @@
 /* ---------------------------------------------------------------------------------------------- */
-/* Make HTML more responsive (adapted from https://fluidity.sexy ← note: broken link)             */
+/* Make HTML more responsive (adapted from https://fluidity.sexy ← note: dead link)               */
 /* ---------------------------------------------------------------------------------------------- */
-img, canvas, iframe, video, svg, select, textarea { max-width: 100%; }
+img, canvas, iframe, video, svg, select, textarea { max-width: 100%; height: auto; }
 pre { overflow-x: auto; }
 
 /* ---------------------------------------------------------------------------------------------- */
